--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,10 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("org.springframework.boot:spring-boot-starter-jdbc")
+	runtime("com.h2database:h2")
+
+	compileOnly('org.projectlombok:lombok')
 }
