--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,13 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'war'
+war {
+	baseName = 'board'
+}
 
-group = 'board'
-version = '0.0.1-SNAPSHOT'
+
+
 sourceCompatibility = 1.8
 
 repositories {
