--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 server.jsp-servlet.init-parameters.development=true
 #port
-server.port=${port:8888}
+#server.port=${port:8888}
 
 #database
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
